--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>gateway</module>
         <module>book</module>
+        <module>newBook</module>
     </modules>
 
     <dependencyManagement>
